samples/_failures_safe/1761076866_56f25e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e53bf12.c: In function ‘main’:
./samples/SAFE/__tmp_6e53bf12.c:162:12: error: missing terminating " character
  162 |     printf("\nMost common log level: %s\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6e53bf12.c:162:5: error: expected expression at end of input
  162 |     printf("\nMost common log level: %s\n
      |     ^~~~~~
./samples/SAFE/__tmp_6e53bf12.c:162:5: error: expected declaration or statement at end of input
